Bug 898444 - Wrap nsDisplayScrollLayer only around the scrolled content. r=tn, a=koi+